--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=MCCI LoRaWAN LMIC library
-version=4.1.1
+version=5.0.0-pre1
 author=IBM, Matthijs Kooijman, Terry Moore, ChaeHee Won, Frank Rose
 maintainer=Terry Moore <tmm@mcci.com>
 sentence=Arduino port of the LMIC (LoraWAN-MAC-in-C) framework provided by IBM.
